--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "dev": "nodemon --exec ts-node src/App.ts",
-      "build": "tsc"
+        "dev": "nodemon --exec ts-node src/App.ts",
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
@@ -13,6 +13,7 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "config": "^3.3.9",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -26,12 +27,12 @@
         "pg": "^8.10.0",
         "pino": "^8.11.0",
         "pino-pretty": "^10.0.0",
-        "ts-node": "^10.9.1",
-        "yup": "^1.1.1"
+        "ts-node": "^10.9.1"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/config": "^3.3.0",
+        "@types/cookie-parser": "^1.4.4",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.1",
