--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "framer-motion": "^10.16.0",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
